# full-stack-project

backend/: README.md  config.py  dependencies.py  main.py  pyproject.toml
backend/fakeDB/: users_table
backend/models/: __init__.py  camel_model.py  user.py
backend/repositories/: users_repository.py
backend/routes/: __init__.py  users.py
backend/tests/e2e/: conftest.py  test_users_router.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: UserForm.tsx
frontend/src/context/: AxiosProvider.tsx
frontend/src/hooks/: useUsersHooks.ts
frontend/src/interfaces/: user.ts
frontend/src/pages/: HomePage.tsx
